# test_poetry

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  doc.md  index.md
toolsmd/: main.py
toolsmd/iss/: __init__.py  iss.py
toolsmd/tests/: test_sum.py
toolsmd/whisper/: sum.py
