[tool.poetry]
name = "toolsmd"
version = "0.1.0"
description = "Dummy package to test poetry."
authors = ["MathieuDem2023"]
readme = "README.md"
packages = [{include = "toolsmd"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
geopandas = "^0.13.0"
pandas = "^2.0.1"
shapely = "^2.0.1"
matplotlib = "^3.7.1"
ipykernel = "^6.23.1"
autodoc = "^0.5.0"
pydata-sphinx-theme = "^0.13.3"
sphinx-copybutton = "^0.5.2"
sphinx-togglebutton = "^0.3.2"
sphinx = "6.2.1"
myst-parser = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
